--- a/作業題目.ipynb
+++ b/作業題目.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {
     "id": "7-HcNGFsFD-_"
    },
@@ -98,17 +98,17 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0,  3,  6,  9, 12, 15, 18])"
+       "array([ 3,  6,  9, 12, 15, 18])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#3.呈1題，將數列取出3的倍數。\n",
-    "a[::3]"
+    "a[3::3]"
    ]
   },
   {
