--- a/作業題目 Day3.ipynb
+++ b/作業題目 Day3.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "id": "5Vknqg8esbl_"
    },
@@ -71,17 +71,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6 倍\n"
+      "0.09999999999999999 倍\n"
      ]
     }
    ],
    "source": [
     "#2.30分貝的聲壓會是50分貝的幾倍?\n",
-    "#公式移項過後可以得到 V1 = ?\n",
+    "#公式移項過後可以得到 V1 = 10^(Gdb/20)*V0\n",
     "#請寫下程式\n",
-    "a1 = (30/20)*np.log10(20)\n",
-    "a2 = (50/20)*np.log10(20)\n",
-    "print(a1/a2, '倍')"
+    "V30 = 10**(30/20)*20\n",
+    "V50 = 10**(50/20)*20\n",
+    "print(V30/V50, '倍')"
    ]
   },
   {
