--- a/作業題目 Day4.ipynb
+++ b/作業題目 Day4.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "id": "owy7B7Us2ZEM"
    },
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "executionInfo": {
      "elapsed": 818,
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "executionInfo": {
      "elapsed": 1269,
@@ -110,19 +110,20 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([False, False, False, False, False, False])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ True  True  True  True  True  True]\n",
+      "True\n"
+     ]
     }
    ],
    "source": [
     "#2.是否全班同學最高分都是國文?\n",
-    "np.greater(chinese_score, english_score)"
+    "compare1 = chinese_score > english_score\n",
+    "compare2 = chinese_score > math_score\n",
+    "print(np.logical_and(compare1,compare2))\n",
+    "print(np.logical_and(compare1,compare2).any())"
    ]
   },
   {
