--- a/作業題目 Day4.ipynb
+++ b/作業題目 Day4.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "id": "owy7B7Us2ZEM"
    },
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "executionInfo": {
      "elapsed": 1269,
@@ -106,7 +106,8 @@
      },
      "user_tz": -480
     },
-    "id": "F4Hzk1HM8pBZ"
+    "id": "F4Hzk1HM8pBZ",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -133,6 +134,84 @@
    },
    "source": [
     "是, 全班同學最高分都是國文"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 產生一個 1-11 的一維陣列，並且把 3-6 由正數變成負數。\n",
+    "- 試著從一個隨機陣列中，找出比 0.5 大的數有幾個？"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.arange(1,12)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1,  2, -3, -4, -5, -6,  7,  8,  9, 10, 11])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[2:6] = a[2:6]*-1\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy.random import default_rng\n",
+    "rng = default_rng()\n",
+    "random = rng.random((10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "比0.5大的數有4個\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('比0.5大的數有{}個'.format(sum(random>0.5)))"
    ]
   }
  ],
